Fix spacing

--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 #cat-box {
     display: block;
     padding: 16px 0 0 32px;
-    width: 400px;
+    height: 200px;
     float: left;
 }
 #cat-menu {
@@ -74,15 +74,16 @@ li:before {
     font-size: 14px;
     text-align: center;
     text-decoration: none;
-    margin: 20px 32px;
+    margin: 100px 32px;
     cursor: pointer;
     float: left;
+    display: block;
 }
 
 #admin-box {
     width: 230px;
     float: left;
-    margin-top: 20px;
+    margin-top: 100px;
     display: none;
 }
 
